# clock

./: .gitignore  Cargo.toml
cli/: Cargo.toml
cli/src/: main.rs
include/: clock.h
lib/: Cargo.toml
lib/src/: common.rs  lib.rs  macos.rs  stopwatch.rs  timer.rs
lib/src/macos/: rust.rs  stopwatch.rs  timer.rs
macOS/Clock/: ClockApp.swift  ContentView.swift
macOS/Clock.xcodeproj/: project.pbxproj
macOS/Clock.xcodeproj/project.xcworkspace/xcuserdata/allisterharvey.xcuserdatad/: UserInterfaceState.xcuserstate
macOS/Clock.xcodeproj/xcuserdata/allisterharvey.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
macOS/Clock/Components/Tables/: LapTimeTable.swift
macOS/Clock/Models/: LapTimes.swift  RDuration.swift  Stopwatch.swift  Timer.swift
macOS/Clock/Views/: RTimerView.swift  StopwatchView.swift
macOS/ClockTests/: ClockTests.swift
macOS/ClockUITests/: ClockUITests.swift  ClockUITestsLaunchTests.swift
scripts/: pre-build-macOS.sh
