[package]
name = "clock"
version = "0.1.0"
edition = "2021"
description = "Core logic for Clock apps"
publish = false
license = "MIT"

[lib]
crate-type = ["staticlib", "rlib", "cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
